# uchile_navigation

./: .gitignore  README.md
base_local_planner/: CMakeLists.txt  package.xml  setup.py
base_local_planner/include/base_local_planner/: costmap_model.h
base_local_planner/src/: trajectory_planner.cpp
bender_cmd_vel_mux/: package.xml
bender_nav/: CMakeLists.txt  package.xml
bender_nav/config/amcl/: amcl_diff.yaml
bender_nav/config/bender_nav/: goal_server.yaml
bender_nav/config/gmapping/: gmapping.yaml
bender_nav/config/move_base/: costmap_common.yaml  global_costmap.yaml  local_costmap.yaml  move_base.yaml
bender_nav/config/move_base/planner/: base_local_planner.yaml  dwa_local_planner.yaml  global_planner.yaml
bender_nav/config/rviz/: localization_tuning.rviz
bender_nav/include/bender_nav/: GoalCalculator.h  GoalHandler.h  GoalServer.h  GoalServerState.h  GoalStates.h
bender_nav/install/: install.sh
bender_nav/launch/: complete_map_A.launch  complete_map_B.launch  complete_nav.launch  complete_slam.launch  goal_server.launch  hardware.launch  move_base.launch  move_base.launch.xml  navigation.launch  safety_control.launch  slam.launch
bender_nav/launch/localization/: amcl.launch  amcl.launch.xml  gmapping.launch  gmapping.launch.xml  odom.launch
bender_nav/src/: GoalCalculator.cpp  GoalHandler.cpp  GoalServer.cpp  GoalServerState.cpp  asus_safety_control.py  low_level_asus_safety_control.py  low_level_safety_control.py  main.cpp
bender_navigation/: CMakeLists.txt  package.xml
bender_navigation_utils/: CMakeLists.txt  package.xml
bender_navigation_utils/launch/: amcl_spreader.launch  base_accel_calculator.launch  costmap_cleaner.launch  plan_remaker.xml  pose_publisher.launch
bender_navigation_utils/src/: BenderMapPose.cpp  CostmapCleaner.cpp  PlanRemaker.cpp  TwistAccelCalculator.py
bender_twist_recovery/: CMakeLists.txt  package.xml  twist_plugin.xml
bender_twist_recovery/include/bender_twist_recovery/: twist_recovery.h
bender_twist_recovery/src/: twist_recovery.cpp
uchile_nav/: CMakeLists.txt  package.xml
uchile_nav/config/amcl/: amcl_diff.yaml
uchile_nav/config/move_base/: costmap_common.yaml  local_costmap.yaml  move_base.yaml
uchile_nav/config/move_base/costmap/: common.yaml  global.yaml  local.yaml
uchile_nav/config/move_base/matlab/: plotCostmapCostDecay.m
uchile_nav/config/move_base/planner/: dwa_local_planner.yaml  navfn.yaml
uchile_nav/include/uchile_nav/: GoalCalculator.h  GoalHandler.h  GoalServer.h  GoalServerState.h  GoalStates.h  goal_server_simple.h
uchile_nav/install/: install.sh
uchile_nav/launch/: complete_map_A.launch  complete_map_B.launch  goal_server.launch.xml  move_base.launch.xml  navigation.launch  safety_control.launch  slam.launch
uchile_nav/launch/localization/: amcl.launch.xml  gmapping.launch.xml
uchile_nav/src/: GoalCalculator.cpp  GoalHandler.cpp  GoalServer.cpp  GoalServerState.cpp  giro_test.py  goal_server_simple.cpp  lab_goals.py  low_level_safety_control.py  main.cpp  move_to.py  test.py  test2.py  word_goal.py
uchile_navigation/: CMakeLists.txt  package.xml
uchile_navigation_utils/: CMakeLists.txt  package.xml
uchile_navigation_utils/launch/: amcl_spreader.launch  base_accel_calculator.launch  base_accel_calculator_maqui.launch  costmap_cleaner.launch  costmap_cleaner_py.launch  pepper_head_fix.launch  pepper_head_mapping_fix.launch  plan_remaker.xml  pose_publisher.launch
uchile_navigation_utils/scripts/: clean_rqt_config.bash
uchile_navigation_utils/src/: BenderMapPose.cpp  CostmapCleaner.cpp  PlanRemaker.cpp  TwistAccelCalculator.py  amclSpreader.cpp  costmap_cleaner.py  pepper_head_fix.py  pepper_head_mapping_fix.py
uchile_twist_recovery/: CMakeLists.txt  package.xml  twist_plugin.xml
uchile_twist_recovery/config/: example.yaml
uchile_twist_recovery/include/uchile_twist_recovery/: twist_recovery.h
uchile_twist_recovery/src/: twist_recovery.cpp
