<?xml version="1.0"?>
<package>
	<name>bender_navigation_utils</name>
	<version>1.0.0</version>
	<description>bender_navigation_utils</description>

	<!-- team -->
	<maintainer email="bender.devel@gmail.com">
	  Bender Team - UChile Homebreakers</maintainer>
	<author     email="bender.devel@gmail.com">
	  Bender Team - UChile Homebreakers</author>

	<!-- specific developers -->
	<maintainer email="matias.pavez.b@gmail.com">Matias Pavez</maintainer>
	<author>Matías Pavez</author>

	<license>TODO</license>


	<!-- about bender and related repository -->
	<url type="website">bender.li2.uchile.cl</url>
	<url type="bugtracker">
	  https://bitbucket.org/uchile-robotics-die/bender_navigation/issues</url>
	<url type="repository">
	  https://bitbucket.org/uchile-robotics-die/bender_navigation</url>


	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>actionlib</build_depend>
	<build_depend>bender_cmd_vel_mux</build_depend>
	<build_depend>bender_msgs</build_depend>
	<build_depend>bender_srvs</build_depend>
	<build_depend>bender_tf</build_depend>
	<build_depend>geometry_msgs</build_depend>
	<build_depend>move_base_msgs</build_depend>
	<build_depend>nav_msgs</build_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>roslib</build_depend>
	<build_depend>rospy</build_depend>
	<build_depend>sensor_msgs</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>std_srvs</build_depend>
	<build_depend>tf</build_depend>
	<build_depend>bender_utils</build_depend>
	<build_depend>pcl_ros</build_depend>
	<build_depend>libpcl-all-dev</build_depend>
	<build_depend>pcl_conversions</build_depend>

	<run_depend>bender_utils</run_depend>
	<run_depend>actionlib</run_depend>
	<run_depend>bender_cmd_vel_mux</run_depend>
	<run_depend>bender_joy</run_depend>
	<run_depend>bender_msgs</run_depend>
	<run_depend>bender_sensors</run_depend>
	<run_depend>bender_srvs</run_depend>
	<run_depend>bender_tf</run_depend>
	<run_depend>geometry_msgs</run_depend>
	<run_depend>move_base_msgs</run_depend>
	<run_depend>nav_msgs</run_depend>
	<run_depend>roscpp</run_depend>
	<run_depend>roslib</run_depend>
	<run_depend>rospy</run_depend>
	<run_depend>sensor_msgs</run_depend>
	<run_depend>std_msgs</run_depend>
	<run_depend>std_srvs</run_depend>
	<run_depend>tf</run_depend>
	<run_depend>pcl_ros</run_depend>
	<run_depend>libpcl-all</run_depend>
	<run_depend>pcl_conversions</run_depend>
	<run_depend>rosaria</run_depend>
	<run_depend>gmapping</run_depend>
	<run_depend>base_local_planner</run_depend>

	
</package>