<package>
  <name>bender_twist_recovery</name>
  <version>0.1.11</version>
  <description>bender_twist_recovery</description>
  <maintainer email="matias.pavez.b@gmail.com">Matias Pavez</maintainer>
  <author>Bhaskara Marthi</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>

  <build_depend>nav_core</build_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>base_local_planner</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  
  <run_depend>nav_core</run_depend>
  <run_depend>costmap_2d</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>base_local_planner</run_depend>

  <build_depend>bender_utils</build_depend>
  <run_depend>bender_utils</run_depend>

  <export>
    <nav_core plugin="${prefix}/twist_plugin.xml" />
  </export>
  
</package>


