<?xml version="1.0"?>
<package format="2">

    <!-- PACKAGE INFORMATION -->
    <!-- - - - - - - - - - - -->

    <name>uchile_nav</name>
    <version>2.0.0</version>
    
    <description>The uchile_nav package</description>

    <!-- team -->
    <maintainer email="bender.devel@gmail.com">
      Bender Team - UChile Homebreakers</maintainer>
    <author     email="bender.devel@gmail.com">
      Bender Team - UChile Homebreakers</author>

    <!-- specific developers -->
    <maintainer email="matias.pavez.b@gmail.com">Matias Pavez</maintainer>
    <author email="matias.pavez.b@gmail.com">Matias Pavez</author>

    <!-- about bender and related repository -->
    <url type="website">http://robotica-uchile.amtc.cl/</url>
    <url type="bugtracker">
      https://github.com/uchile-robotics/uchile_navigation/issues</url>
    <url type="repository">
      https://github.com/uchile-robotics/uchile_navigation</url>

    <license>TODO</license>
 

    <!-- SYSTEM DEPENDENCIES -->
    <!-- - - - - - - - - - - -->

    <!--  build system tool to build this package -->
    <buildtool_depend>catkin</buildtool_depend>


    <!-- ROS COMM -->
    <depend>roscpp</depend>
    <depend>roslib</depend>
    <depend>rospy</depend>
    <depend>actionlib</depend>

    <!-- common -->
    <depend>std_msgs</depend>
    <depend>std_srvs</depend>

    <!-- bender -->
    <depend>bender_cmd_vel_mux</depend>
    <depend>uchile_msgs</depend>
    <depend>uchile_srvs</depend>
    <depend>bender_tf</depend>
    <depend>bender_utils</depend>
    <depend>bender_joy</depend>
    <depend>bender_sensors</depend>

    <!-- geometry metapackage -->
    <depend>angles</depend>
    <depend>eigen_conversions</depend>
    <depend>kdl_conversions</depend>
    <depend>tf</depend>
    <depend>tf_conversions</depend>
  

    <exec_depend>rosaria</exec_depend>
    <depend>gmapping</depend>
    <depend>pcl_ros</depend>
  
    <build_depend>libpcl-all-dev</build_depend>
    <exec_depend>libpcl-all</exec_depend>
  
    <depend>pcl_conversions</depend>
    
    <!-- common msgs -->
    <depend>sensor_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>actionlib_msgs</depend>
    <depend>diagnostic_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>shape_msgs</depend>
    <depend>stereo_msgs</depend>
    <depend>trajectory_msgs</depend>
    <depend>visualization_msgs</depend>

    <!-- Navigation stack -->
    <depend>amcl</depend>
    <depend>base_local_planner</depend>
    <depend>carrot_planner</depend>
    <depend>clear_costmap_recovery</depend>
    <depend>costmap_2d</depend>
    <depend>dwa_local_planner</depend>
    <depend>fake_localization</depend>
    <depend>global_planner</depend>
    <depend>map_server</depend>
    <depend>move_base</depend>
    <depend>move_base_msgs</depend>
    <depend>move_slow_and_clear</depend>
    <depend>nav_core</depend>
    <depend>navfn</depend>
    <depend>robot_pose_ekf</depend>
    <depend>rotate_recovery</depend>
    <depend>voxel_grid</depend>

    <export>
    </export>
</package>