<package>
  <name>uchile_twist_recovery</name>
  <version>0.1.11</version>
  <description>uchile_twist_recovery</description>


  <!-- original -->
  <author>Bhaskara Marthi</author>
  
  <!-- team -->
  <maintainer email="bender.devel@gmail.com">
    Bender Team - UChile Homebreakers</maintainer>
  <author     email="bender.devel@gmail.com">
    Bender Team - UChile Homebreakers</author>

  <!-- specific developers -->
  <maintainer email="matias.pavez.b@gmail.com">Matias Pavez</maintainer>
  <author>Matías Pavez</author>

  <!-- about bender and related repository -->
  <url type="website">http://robotica-uchile.amtc.cl/</url>
  <url type="bugtracker">
    https://github.com/uchile-robotics/uchile_navigation/issues</url>
  <url type="repository">
    https://github.com/uchile-robotics/uchile_navigation</url>

  <license>TODO</license>



  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>

  <build_depend>nav_core</build_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>base_local_planner</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  
  <run_depend>nav_core</run_depend>
  <run_depend>costmap_2d</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>base_local_planner</run_depend>

  <build_depend>bender_utils</build_depend>
  <run_depend>bender_utils</run_depend>

  <export>
    <nav_core plugin="${prefix}/twist_plugin.xml" />
  </export>
  
</package>


