<?xml version="1.0"?>
<package format="2">
  <name>uchile_twist_recovery</name>
  <version>0.1.11</version>
  <description>uchile_twist_recovery</description>


  <!-- original -->
  <author>Bhaskara Marthi</author>
  
  <!-- team -->
  <maintainer email="bender.devel@gmail.com">
    Bender Team - UChile Homebreakers</maintainer>
  <author     email="bender.devel@gmail.com">
    Bender Team - UChile Homebreakers</author>

  <!-- specific developers -->
  <maintainer email="matias.pavez.b@gmail.com">Matias Pavez</maintainer>
  <author>Matías Pavez</author>

  <!-- about bender and related repository -->
  <url type="website">http://robotica-uchile.amtc.cl/</url>
  <url type="bugtracker">
    https://github.com/uchile-robotics/uchile_navigation/issues</url>
  <url type="repository">
    https://github.com/uchile-robotics/uchile_navigation</url>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>

  <depend>base_local_planner</depend>
  <depend>costmap_2d</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_core</depend>
  <depend>pluginlib</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  
  <depend>roscpp</depend>
  <depend>uchile_util</depend>

  <export>
    <nav_core plugin="${prefix}/twist_plugin.xml" />
  </export>
  
</package>


